2003-08-15  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
        - Applied patch from Steve Chaplin that fixes the CFLAGS.
        - Fixes bug #118984

2003-08-15  Mikael Hallendal  <micke@imendio.com>

	* src/yelp-main.c: 
        (main_restore_session): Return FALSE, otherwise we'll try to start Yelp
          from the session over and over again. Reported by Jody earlier.

2003-08-14  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

2003-08-13  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-view-toc.c
	- Re-added a closing ul tag that was accidentally removed

2003-08-12  Mikael Hallendal  <micke@imendio.com>

        * Release 2.3.6

	* NEWS: Updated for 2.3.6
	* configure.in: Bumped to 2.3.6

	* data/images/bcg.png: 
	- Replace image for one with transparent background.
	* src/yelp-view-toc.c: 
	- Remove the spacer padding image
	- Both these should finally fix bug #89838. Patches from Shaun McCance.

2003-07-30 John Fleck <jfleck@inkstain.net>

	* src/info2html/html.c
	- patch from Shaun re bug #89838

2003-07-24  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-db2html.c:
	- Change parameters passed to stylesheets.

2003-07-15 John Fleck <jfleck@inkstain.net>

	* configure.in: version 2.3.4

2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* configure.in:
	* src/Makefile.am:
	* src/info2html/Makefile.am:
	* src/man2html/Makefile.am:
	* src/yelp-reader.c: (reader_convert_start):
	Move help readers over from libgnome.
	
2003-07-02  Jordi Mallach  <jordi@sindominio.net>

	* yelp.desktop.in: Add StartupNotify support.

2003-06-25  Glynn Foster  <glynn.foster@sun.com>

	* stylesheets/l10n.xml: Add some new languages from 
	Mike Lei - merging patches from sun-patches.

2003-06-25  Glynn Foster  <glynn.foster@sun.com>

	* stylesheets/l10n.xml: Update correct italian translation
	for Next/Previous/Contents.

2003-06-16  Alex Duggan  <aldug@astrolinux.com>
 
 	* src/yelp-main.c: s/dir/directory/  Fixes #111818